COOL_Parser/cw2/gen/CoolParser.cpp

// Generated from /home/student/my-code/cw2/tools/../src/CoolParser.g4 by ANTLR 4.13.2


#include "CoolParserVisitor.h"

#include "CoolParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CoolParserStaticData final {
  CoolParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CoolParserStaticData(const CoolParserStaticData&) = delete;
  CoolParserStaticData(CoolParserStaticData&&) = delete;
  CoolParserStaticData& operator=(const CoolParserStaticData&) = delete;
  CoolParserStaticData& operator=(CoolParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag coolparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<CoolParserStaticData> coolparserParserStaticData = nullptr;

void coolparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (coolparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(coolparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CoolParserStaticData>(
    std::vector<std::string>{
      "program", "class", "inheritance", "feature", "formal_list", "formal", 
      "expr", "assignExpr", "notExpr", "compareExpr", "arithExpr", "term", 
      "factor", "dispatchExpr", "arg_list", "primary", "block_expr", "branch", 
      "let_binding"
    },
    std::vector<std::string>{
      "", "';'", "'{'", "'}'", "'('", "','", "')'", "':'", "'@'", "'.'", 
      "'+'", "'-'", "'*'", "'/'", "'~'", "'<'", "'='", "'=>'", "'<-'", "'<='", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "'--'", "", "'\\u003F'", "", "", "", 
      "", "", "", "", "", "", "", "", "", "'\\n'", "", "", "", "", "", "", 
      "'\\n'"
    },
    std::vector<std::string>{
      "", "SEMI", "OCURLY", "CCURLY", "OPAREN", "COMMA", "CPAREN", "COLON", 
      "AT", "DOT", "PLUS", "MINUS", "STAR", "SLASH", "TILDE", "LT", "EQ", 
      "DARROW", "ASSIGN", "LE", "CLASS", "ELSE", "FI", "IF", "IN", "INHERITS", 
      "ISVOID", "LET", "LOOP", "POOL", "THEN", "WHILE", "CASE", "ESAC", 
      "NEW", "OF", "NOT", "BOOL_CONST", "INT_CONST", "OBJECTID", "TYPEID", 
      "WS", "STR_BEGIN", "COMM_BEGIN", "COMM_ERR1", "LCOMM_BEGIN", "ERROR", 
      "STR_CONST", "STR_END", "STR_ESC_NL", "ESC_BS", "ESC_FF", "ESC_TAB", 
      "ESC_NULL", "ESC_ANY", "NULL", "STR_NL", "STR_ERR", "STR_ANY", "ESTR_END", 
      "ESTR_ESC_NL", "ESTR_NL", "ESTR_ANY", "OCOMM", "CCOMM", "COMM_SKIP", 
      "COMM_ERR", "LCOMM_END", "LCOMM_SKIP"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  coolparserParserStaticData = std::move(staticData);
}

}

CoolParser::CoolParser(TokenStream *input) : CoolParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CoolParser::CoolParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CoolParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *coolparserParserStaticData->atn, coolparserParserStaticData->decisionToDFA, coolparserParserStaticData->sharedContextCache, options);
}

CoolParser::~CoolParser() {
  delete _interpreter;
}

const atn::ATN& CoolParser::getATN() const {
  return *coolparserParserStaticData->atn;
}

std::string CoolParser::getGrammarFileName() const {
  return "CoolParser.g4";
}

const std::vector<std::string>& CoolParser::getRuleNames() const {
  return coolparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& CoolParser::getVocabulary() const {
  return coolparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CoolParser::getSerializedATN() const {
  return coolparserParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

CoolParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CoolParser::ClassContext *> CoolParser::ProgramContext::class_() {
  return getRuleContexts<CoolParser::ClassContext>();
}

CoolParser::ClassContext* CoolParser::ProgramContext::class_(size_t i) {
  return getRuleContext<CoolParser::ClassContext>(i);
}

std::vector<tree::TerminalNode *> CoolParser::ProgramContext::SEMI() {
  return getTokens(CoolParser::SEMI);
}

tree::TerminalNode* CoolParser::ProgramContext::SEMI(size_t i) {
  return getToken(CoolParser::SEMI, i);
}


size_t CoolParser::ProgramContext::getRuleIndex() const {
  return CoolParser::RuleProgram;
}


std::any CoolParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CoolParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

CoolParser::ProgramContext* CoolParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, CoolParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(38);
      class_();
      setState(39);
      match(CoolParser::SEMI);
      setState(43); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == CoolParser::CLASS);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassContext ------------------------------------------------------------------

CoolParser::ClassContext::ClassContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CoolParser::ClassContext::CLASS() {
  return getToken(CoolParser::CLASS, 0);
}

tree::TerminalNode* CoolParser::ClassContext::TYPEID() {
  return getToken(CoolParser::TYPEID, 0);
}

tree::TerminalNode* CoolParser::ClassContext::OCURLY() {
  return getToken(CoolParser::OCURLY, 0);
}

tree::TerminalNode* CoolParser::ClassContext::CCURLY() {
  return getToken(CoolParser::CCURLY, 0);
}

CoolParser::InheritanceContext* CoolParser::ClassContext::inheritance() {
  return getRuleContext<CoolParser::InheritanceContext>(0);
}

std::vector<CoolParser::FeatureContext *> CoolParser::ClassContext::feature() {
  return getRuleContexts<CoolParser::FeatureContext>();
}

CoolParser::FeatureContext* CoolParser::ClassContext::feature(size_t i) {
  return getRuleContext<CoolParser::FeatureContext>(i);
}

std::vector<tree::TerminalNode *> CoolParser::ClassContext::SEMI() {
  return getTokens(CoolParser::SEMI);
}

tree::TerminalNode* CoolParser::ClassContext::SEMI(size_t i) {
  return getToken(CoolParser::SEMI, i);
}


size_t CoolParser::ClassContext::getRuleIndex() const {
  return CoolParser::RuleClass;
}


std::any CoolParser::ClassContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CoolParserVisitor*>(visitor))
    return parserVisitor->visitClass(this);
  else
    return visitor->visitChildren(this);
}

CoolParser::ClassContext* CoolParser::class_() {
  ClassContext *_localctx = _tracker.createInstance<ClassContext>(_ctx, getState());
  enterRule(_localctx, 2, CoolParser::RuleClass);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    match(CoolParser::CLASS);
    setState(46);
    match(CoolParser::TYPEID);
    setState(48);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CoolParser::INHERITS) {
      setState(47);
      inheritance();
    }
    setState(50);
    match(CoolParser::OCURLY);
    setState(56);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CoolParser::OBJECTID) {
      setState(51);
      feature();
      setState(52);
      match(CoolParser::SEMI);
      setState(58);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(59);
    match(CoolParser::CCURLY);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InheritanceContext ------------------------------------------------------------------

CoolParser::InheritanceContext::InheritanceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CoolParser::InheritanceContext::INHERITS() {
  return getToken(CoolParser::INHERITS, 0);
}

tree::TerminalNode* CoolParser::InheritanceContext::TYPEID() {
  return getToken(CoolParser::TYPEID, 0);
}


size_t CoolParser::InheritanceContext::getRuleIndex() const {
  return CoolParser::RuleInheritance;
}


std::any CoolParser::InheritanceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CoolParserVisitor*>(visitor))
    return parserVisitor->visitInheritance(this);
  else
    return visitor->visitChildren(this);
}

CoolParser::InheritanceContext* CoolParser::inheritance() {
  InheritanceContext *_localctx = _tracker.createInstance<InheritanceContext>(_ctx, getState());
  enterRule(_localctx, 4, CoolParser::RuleInheritance);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    match(CoolParser::INHERITS);
    setState(62);
    match(CoolParser::TYPEID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FeatureContext ------------------------------------------------------------------

CoolParser::FeatureContext::FeatureContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CoolParser::FeatureContext::OBJECTID() {
  return getToken(CoolParser::OBJECTID, 0);
}

tree::TerminalNode* CoolParser::FeatureContext::OPAREN() {
  return getToken(CoolParser::OPAREN, 0);
}

tree::TerminalNode* CoolParser::FeatureContext::CPAREN() {
  return getToken(CoolParser::CPAREN, 0);
}

tree::TerminalNode* CoolParser::FeatureContext::COLON() {
  return getToken(CoolParser::COLON, 0);
}

tree::TerminalNode* CoolParser::FeatureContext::TYPEID() {
  return getToken(CoolParser::TYPEID, 0);
}

tree::TerminalNode* CoolParser::FeatureContext::OCURLY() {
  return getToken(CoolParser::OCURLY, 0);
}

CoolParser::ExprContext* CoolParser::FeatureContext::expr() {
  return getRuleContext<CoolParser::ExprContext>(0);
}

tree::TerminalNode* CoolParser::FeatureContext::CCURLY() {
  return getToken(CoolParser::CCURLY, 0);
}

CoolParser::Formal_listContext* CoolParser::FeatureContext::formal_list() {
  return getRuleContext<CoolParser::Formal_listContext>(0);
}

tree::TerminalNode* CoolParser::FeatureContext::ASSIGN() {
  return getToken(CoolParser::ASSIGN, 0);
}


size_t CoolParser::FeatureContext::getRuleIndex() const {
  return CoolParser::RuleFeature;
}


std::any CoolParser::FeatureContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CoolParserVisitor*>(visitor))
    return parserVisitor->visitFeature(this);
  else
    return visitor->visitChildren(this);
}

CoolParser::FeatureContext* CoolParser::feature() {
  FeatureContext *_localctx = _tracker.createInstance<FeatureContext>(_ctx, getState());
  enterRule(_localctx, 6, CoolParser::RuleFeature);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(83);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(64);
      match(CoolParser::OBJECTID);
      setState(65);
      match(CoolParser::OPAREN);
      setState(67);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == CoolParser::OBJECTID) {
        setState(66);
        formal_list();
      }
      setState(69);
      match(CoolParser::CPAREN);
      setState(70);
      match(CoolParser::COLON);
      setState(71);
      match(CoolParser::TYPEID);
      setState(72);
      match(CoolParser::OCURLY);
      setState(73);
      expr();
      setState(74);
      match(CoolParser::CCURLY);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(76);
      match(CoolParser::OBJECTID);
      setState(77);
      match(CoolParser::COLON);
      setState(78);
      match(CoolParser::TYPEID);
      setState(81);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == CoolParser::ASSIGN) {
        setState(79);
        match(CoolParser::ASSIGN);
        setState(80);
        expr();
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Formal_listContext ------------------------------------------------------------------

CoolParser::Formal_listContext::Formal_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CoolParser::FormalContext *> CoolParser::Formal_listContext::formal() {
  return getRuleContexts<CoolParser::FormalContext>();
}

CoolParser::FormalContext* CoolParser::Formal_listContext::formal(size_t i) {
  return getRuleContext<CoolParser::FormalContext>(i);
}

std::vector<tree::TerminalNode *> CoolParser::Formal_listContext::COMMA() {
  return getTokens(CoolParser::COMMA);
}

tree::TerminalNode* CoolParser::Formal_listContext::COMMA(size_t i) {
  return getToken(CoolParser::COMMA, i);
}


size_t CoolParser::Formal_listContext::getRuleIndex() const {
  return CoolParser::RuleFormal_list;
}


std::any CoolParser::Formal_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CoolParserVisitor*>(visitor))
    return parserVisitor->visitFormal_list(this);
  else
    return visitor->visitChildren(this);
}

CoolParser::Formal_listContext* CoolParser::formal_list() {
  Formal_listContext *_localctx = _tracker.createInstance<Formal_listContext>(_ctx, getState());
  enterRule(_localctx, 8, CoolParser::RuleFormal_list);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    formal();
    setState(90);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CoolParser::COMMA) {
      setState(86);
      match(CoolParser::COMMA);
      setState(87);
      formal();
      setState(92);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FormalContext ------------------------------------------------------------------

CoolParser::FormalContext::FormalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CoolParser::FormalContext::OBJECTID() {
  return getToken(CoolParser::OBJECTID, 0);
}

tree::TerminalNode* CoolParser::FormalContext::COLON() {
  return getToken(CoolParser::COLON, 0);
}

tree::TerminalNode* CoolParser::FormalContext::TYPEID() {
  return getToken(CoolParser::TYPEID, 0);
}


size_t CoolParser::FormalContext::getRuleIndex() const {
  return CoolParser::RuleFormal;
}


std::any CoolParser::FormalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CoolParserVisitor*>(visitor))
    return parserVisitor->visitFormal(this);
  else
    return visitor->visitChildren(this);
}

CoolParser::FormalContext* CoolParser::formal() {
  FormalContext *_localctx = _tracker.createInstance<FormalContext>(_ctx, getState());
  enterRule(_localctx, 10, CoolParser::RuleFormal);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    match(CoolParser::OBJECTID);
    setState(94);
    match(CoolParser::COLON);
    setState(95);
    match(CoolParser::TYPEID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

CoolParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CoolParser::AssignExprContext* CoolParser::ExprContext::assignExpr() {
  return getRuleContext<CoolParser::AssignExprContext>(0);
}


size_t CoolParser::ExprContext::getRuleIndex() const {
  return CoolParser::RuleExpr;
}


std::any CoolParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CoolParserVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}

CoolParser::ExprContext* CoolParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 12, CoolParser::RuleExpr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    assignExpr();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignExprContext ------------------------------------------------------------------

CoolParser::AssignExprContext::AssignExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CoolParser::AssignExprContext::OBJECTID() {
  return getToken(CoolParser::OBJECTID, 0);
}

tree::TerminalNode* CoolParser::AssignExprContext::ASSIGN() {
  return getToken(CoolParser::ASSIGN, 0);
}

CoolParser::AssignExprContext* CoolParser::AssignExprContext::assignExpr() {
  return getRuleContext<CoolParser::AssignExprContext>(0);
}

CoolParser::NotExprContext* CoolParser::AssignExprContext::notExpr() {
  return getRuleContext<CoolParser::NotExprContext>(0);
}


size_t CoolParser::AssignExprContext::getRuleIndex() const {
  return CoolParser::RuleAssignExpr;
}


std::any CoolParser::AssignExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CoolParserVisitor*>(visitor))
    return parserVisitor->visitAssignExpr(this);
  else
    return visitor->visitChildren(this);
}

CoolParser::AssignExprContext* CoolParser::assignExpr() {
  AssignExprContext *_localctx = _tracker.createInstance<AssignExprContext>(_ctx, getState());
  enterRule(_localctx, 14, CoolParser::RuleAssignExpr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(103);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(99);
      match(CoolParser::OBJECTID);
      setState(100);
      match(CoolParser::ASSIGN);
      setState(101);
      assignExpr();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(102);
      notExpr();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NotExprContext ------------------------------------------------------------------

CoolParser::NotExprContext::NotExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CoolParser::NotExprContext::NOT() {
  return getToken(CoolParser::NOT, 0);
}

CoolParser::NotExprContext* CoolParser::NotExprContext::notExpr() {
  return getRuleContext<CoolParser::NotExprContext>(0);
}

CoolParser::CompareExprContext* CoolParser::NotExprContext::compareExpr() {
  return getRuleContext<CoolParser::CompareExprContext>(0);
}


size_t CoolParser::NotExprContext::getRuleIndex() const {
  return CoolParser::RuleNotExpr;
}


std::any CoolParser::NotExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CoolParserVisitor*>(visitor))
    return parserVisitor->visitNotExpr(this);
  else
    return visitor->visitChildren(this);
}

CoolParser::NotExprContext* CoolParser::notExpr() {
  NotExprContext *_localctx = _tracker.createInstance<NotExprContext>(_ctx, getState());
  enterRule(_localctx, 16, CoolParser::RuleNotExpr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(108);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CoolParser::NOT: {
        enterOuterAlt(_localctx, 1);
        setState(105);
        match(CoolParser::NOT);
        setState(106);
        notExpr();
        break;
      }

      case CoolParser::OCURLY:
      case CoolParser::OPAREN:
      case CoolParser::TILDE:
      case CoolParser::IF:
      case CoolParser::ISVOID:
      case CoolParser::LET:
      case CoolParser::WHILE:
      case CoolParser::CASE:
      case CoolParser::NEW:
      case CoolParser::BOOL_CONST:
      case CoolParser::INT_CONST:
      case CoolParser::OBJECTID:
      case CoolParser::STR_CONST: {
        enterOuterAlt(_localctx, 2);
        setState(107);
        compareExpr();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompareExprContext ------------------------------------------------------------------

CoolParser::CompareExprContext::CompareExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CoolParser::ArithExprContext *> CoolParser::CompareExprContext::arithExpr() {
  return getRuleContexts<CoolParser::ArithExprContext>();
}

CoolParser::ArithExprContext* CoolParser::CompareExprContext::arithExpr(size_t i) {
  return getRuleContext<CoolParser::ArithExprContext>(i);
}

tree::TerminalNode* CoolParser::CompareExprContext::LT() {
  return getToken(CoolParser::LT, 0);
}

tree::TerminalNode* CoolParser::CompareExprContext::LE() {
  return getToken(CoolParser::LE, 0);
}

tree::TerminalNode* CoolParser::CompareExprContext::EQ() {
  return getToken(CoolParser::EQ, 0);
}


size_t CoolParser::CompareExprContext::getRuleIndex() const {
  return CoolParser::RuleCompareExpr;
}


std::any CoolParser::CompareExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CoolParserVisitor*>(visitor))
    return parserVisitor->visitCompareExpr(this);
  else
    return visitor->visitChildren(this);
}

CoolParser::CompareExprContext* CoolParser::compareExpr() {
  CompareExprContext *_localctx = _tracker.createInstance<CompareExprContext>(_ctx, getState());
  enterRule(_localctx, 18, CoolParser::RuleCompareExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    arithExpr();
    setState(113);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      setState(111);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 622592) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(112);
      arithExpr();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArithExprContext ------------------------------------------------------------------

CoolParser::ArithExprContext::ArithExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CoolParser::TermContext *> CoolParser::ArithExprContext::term() {
  return getRuleContexts<CoolParser::TermContext>();
}

CoolParser::TermContext* CoolParser::ArithExprContext::term(size_t i) {
  return getRuleContext<CoolParser::TermContext>(i);
}

std::vector<tree::TerminalNode *> CoolParser::ArithExprContext::PLUS() {
  return getTokens(CoolParser::PLUS);
}

tree::TerminalNode* CoolParser::ArithExprContext::PLUS(size_t i) {
  return getToken(CoolParser::PLUS, i);
}

std::vector<tree::TerminalNode *> CoolParser::ArithExprContext::MINUS() {
  return getTokens(CoolParser::MINUS);
}

tree::TerminalNode* CoolParser::ArithExprContext::MINUS(size_t i) {
  return getToken(CoolParser::MINUS, i);
}


size_t CoolParser::ArithExprContext::getRuleIndex() const {
  return CoolParser::RuleArithExpr;
}


std::any CoolParser::ArithExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CoolParserVisitor*>(visitor))
    return parserVisitor->visitArithExpr(this);
  else
    return visitor->visitChildren(this);
}

CoolParser::ArithExprContext* CoolParser::arithExpr() {
  ArithExprContext *_localctx = _tracker.createInstance<ArithExprContext>(_ctx, getState());
  enterRule(_localctx, 20, CoolParser::RuleArithExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(115);
    term();
    setState(120);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(116);
        _la = _input->LA(1);
        if (!(_la == CoolParser::PLUS

        || _la == CoolParser::MINUS)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(117);
        term(); 
      }
      setState(122);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TermContext ------------------------------------------------------------------

CoolParser::TermContext::TermContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CoolParser::FactorContext *> CoolParser::TermContext::factor() {
  return getRuleContexts<CoolParser::FactorContext>();
}

CoolParser::FactorContext* CoolParser::TermContext::factor(size_t i) {
  return getRuleContext<CoolParser::FactorContext>(i);
}

std::vector<tree::TerminalNode *> CoolParser::TermContext::STAR() {
  return getTokens(CoolParser::STAR);
}

tree::TerminalNode* CoolParser::TermContext::STAR(size_t i) {
  return getToken(CoolParser::STAR, i);
}

std::vector<tree::TerminalNode *> CoolParser::TermContext::SLASH() {
  return getTokens(CoolParser::SLASH);
}
